<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">Mamá Samsung</string>
    <string name="c_progressbar_title">Cargando</string>
    <string name="c_progressbar_description">Espere un momento por favor!</string>

    <!-- Pull to refresh -->
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh…</string>

    <!-- Register -->
    <string name="c_register_full_name">Nombre</string>
    <string name="c_register_email">Dirección de correo electrónico</string>
    <string name="c_register_submit">Registrar nuevo usuario</string>
    <string name="c_register_phone">Número telefonico</string>
    <string name="c_register_country">País</string>
    <string name="c_register_prompt">Selecciona un país</string>

    <string-array name="c_register_countries">
        <item>Colombia</item>
        <item>Brasil</item>
        <item>Argentina</item>
        <item>Uruguay</item>
        <item>Paraguay</item>
        <item>Chile</item>
        <item>México</item>
        <item>Perú</item>
        <item>Venezuela</item>
    </string-array>

    <string name="c_register_samsung_info">Deseo recibir información de Samsung vía correo electrónico o SMS.</string>
    <string name="c_register_terms">Acepto los términos y condiciones.</string>

    <!-- Postulate -->

    <string name="c_postulate_title">Ingresa los datos de la mamá que vas a postular, el regístro implica el primer voto.</string>
    <string name="c_postulate_typical_sentence">Su frase típica es</string>
    <string name="c_postulate_smart_tip">Tip de Smart Mamá favorito</string>
    <string name="c_postulate_why_postulate">Porqué debe ser ¡LA MAMÁ DEL AÑO SAMSUNG!</string>
    <string name="c_postulate_submit">Seleccionar fotografía</string>

    <!-- File dialog -->
    <string name="location">Ubicación</string>
    <string name="cant_read_folder">La carpeta no puede ser leída!</string>
    <string name="c_filedialog_back">Regresar</string>
    <string name="select">Postular mamá</string>
    <string name="no_data">No hay datos!</string>

    <color name="gray">#ffff0000</color>

    <string name="err">Error</string>
    <string name="c_exit_app">Cerrar aplicación</string>
    <string name="c_ranking">Top mamás</string>
    <string name="c_postulate">Postular mamá</string>
    <string name="c_load_imei_error">No fué posible verificar sus datos de acceso a la aplicación, por favor intentelo nuevamente más tarde.</string>

    <!-- reg -->
    <string name="c_reg_accept_terms">Debes aceptar los términos y condiciones para continuar con el regístro.</string>
    <string name="c_reg_invalid_name">Ingresa un nombre válido, mayor a dos carecteres de la A-Z.</string>
    <string name="c_reg_invalid_email">Ingresa un correo electrónico válido.</string>
    <string name="c_reg_invalid_phone">Ingresa un número telefónico válido, correspondiente a la nomenclatura de tu país.</string>
    <string name="c_reg_user_ok">Usuario regístrado!.</string>
    <string name="c_reg_user_fail">No fué posible registrar el usuario, intentelo nuevamente más tarde!.</string>

    <!-- postulate -->
    <string name="c_pos_fill_all_fields">Ingrese obligatoriamente toda la información. Mayor a 2 caracteres.</string>
    <string name="c_postulate_ok">La mamá samsung fué postulada con éxito!</string>
    <string name="c_postulate_fail">No fué posible postular la mamá Samsung, intentalo nuevamente más tarde!</string>

    <!-- voting -->
    <string name="c_vote_ok">Su voto fué realizado!</string>
    <string name="c_vote_fail">No fué posible realizar una votación, intentelo más tarde!</string>
    <string name="c_vote">Votar</string>
    <string name="c_error_loading_moms">No fué posible obtener el listado de Smart Mamás!</string>
    <string name="c_reg_user_fail_loading">Error obteniendo los datos del usuario registrado.</string>
    <string name="c_no_postulated_moms">No hay mamás postuladas en este momento!</string>
    <string name="c_no_ranking_moms">No hay información de ranking.</string>
    <string name="c_error_loading_ranking">Error, cargando listado de ranking.</string>
    <string name="c_rating_title">Vota por mi</string>
    <string name="c_submit_votation">Votar!</string>
    <string name="c_see_my_mom">Vew mi mamá postulada</string>
    <string name="c_register_using_fb">Registrar usando facebook</string>
    <string name="c_facebook_share">Compartir en facebook!</string>

</resources>