<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/mom_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/mom_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_rating_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RatingBar
                android:id="@+id/mom_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/voteSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_submit_votation" />

            <Button
                android:id="@+id/fbVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_facebook_share" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>