<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register" >

    <!-- Registration Form -->

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="121dp"
        android:layout_height="34dp"
        android:layout_x="192dp"
        android:layout_y="559dp"
        android:background="@drawable/continue_btn" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="152dp"
        android:layout_height="30dp"
        android:layout_x="120dp"
        android:layout_y="164dp"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="12dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="152dp"
        android:layout_height="30dp"
        android:layout_x="121dp"
        android:layout_y="192dp"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/reg_phone"
        android:layout_width="152dp"
        android:layout_height="30dp"
        android:layout_x="121dp"
        android:layout_y="218dp"
        android:inputType="phone"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/reg_country"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_x="121dp"
        android:layout_y="245dp"
        android:drawSelectorOnTop="true"
        android:prompt="@string/c_register_prompt" />

    <CheckBox
        android:id="@+id/reg_terms"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_x="56dp"
        android:layout_y="273dp"
        android:text="@string/c_register_terms"
        android:textColor="@color/terms_color"
        android:textSize="10dp" />

    <CheckBox
        android:id="@+id/reg_information"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_x="56dp"
        android:layout_y="311dp"
        android:text="@string/c_register_samsung_info"
        android:textColor="@color/terms_color"
        android:textSize="10dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_x="56dp"
        android:layout_y="360dp"
        android:background="@drawable/continue_btn" />

</AbsoluteLayout>